--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 */.settings
 */.buildpath
 */.project
+*.zip
 
 # Ignore specific project
 hello-world
 university-sort
 university-view
-project-1-backup.zip
+*.zip
